log
Fri Apr 17 07:09:13 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:16: error: comparison of distinct pointer types lacks a cast [-Werror=compare-distinct-pointer-types]
   75 |     while (key == map->buckets[i] || map->buckets[i] == NULL) i++;
      |                ^~
hashmap.c:77:5: error: expected ‘,’ or ‘;’ before ‘return’
   77 |     return buscado;
      |     ^~~~~~
hashmap.c:76:11: error: unused variable ‘buscado’ [-Werror=unused-variable]
   76 |     Pair *buscado = map->buckets[i]
      |           ^~~~~~~
cc1: all warnings being treated as errors
2debd1b
Fri Apr 17 07:12:19 PM UTC 2026: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:23: error: comparison of distinct pointer types lacks a cast [-Werror=compare-distinct-pointer-types]
   75 |     while (strcmp(key == map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                       ^~
hashmap.c:75:23: error: passing argument 1 of ‘strcmp’ makes pointer from integer without a cast [-Wint-conversion]
   75 |     while (strcmp(key == map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                   ~~~~^~~~~~~~~~~~~~~~~~
      |                       |
      |                       int
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:32: note: expected ‘const char *’ but argument is of type ‘int’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                    ~~~~~~~~~~~~^~~~
hashmap.c:75:12: error: too few arguments to function ‘strcmp’
   75 |     while (strcmp(key == map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |            ^~~~~~
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
cc1: all warnings being treated as errors
50e2fc2
Fri Apr 17 07:12:40 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:36: error: passing argument 2 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     while (strcmp(key, map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                        ~~~~~~~~~~~~^~~
      |                                    |
      |                                    Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
79ecadb
Fri Apr 17 07:13:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:36: error: passing argument 2 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     while (strcmp(key, map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                        ~~~~~~~~~~~~^~~
      |                                    |
      |                                    Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
hashmap.c:76:21: error: initialization of ‘Pair *’ from incompatible pointer type ‘char *’ [-Wincompatible-pointer-types]
   76 |     Pair *buscado = map->buckets[i]->key;
      |                     ^~~
c2ea925
Fri Apr 17 07:13:44 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:36: error: passing argument 2 of ‘strcmp’ from incompatible pointer type [-Wincompatible-pointer-types]
   75 |     while (strcmp(key, map->buckets[i]) == 0 || map->buckets[i] == NULL) i++;
      |                        ~~~~~~~~~~~~^~~
      |                                    |
      |                                    Pair *
In file included from test.c:3:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘Pair *’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
hashmap.c:76:21: error: initialization of ‘Pair *’ from incompatible pointer type ‘char *’ [-Wincompatible-pointer-types]
   76 |     Pair *buscado = map->buckets[i]->key;
      |                     ^~~
6a29cac
Fri Apr 17 07:15:22 PM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
60d1483
Fri Apr 17 07:17:59 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|7
total_score: 0/60
64e93b5
Fri Apr 17 07:20:45 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
2b15116
Fri Apr 17 07:31:24 PM UTC 2026: 
 hashmap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
3a4b5b6
Fri Apr 17 07:33:40 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f8ad528
Fri Apr 17 07:36:43 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a6594f
Fri Apr 17 07:37:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7b934dd
Fri Apr 17 07:40:15 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
a34a08c
Fri Apr 17 09:05:18 PM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:38: error: implicit declaration of function ‘sizzof’ [-Wimplicit-function-declaration]
   48 |     HashMap *new = (HashMap *)malloc(sizzof(Hashmap));
      |                                      ^~~~~~
hashmap.c:48:45: error: ‘Hashmap’ undeclared (first use in this function); did you mean ‘HashMap’?
   48 |     HashMap *new = (HashMap *)malloc(sizzof(Hashmap));
      |                                             ^~~~~~~
      |                                             HashMap
hashmap.c:48:45: note: each undeclared identifier is reported only once for each function it appears in
eff69db
Fri Apr 17 09:05:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/60
bfa2fca
Fri Apr 17 09:06:27 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
421365b
Fri Apr 17 09:12:30 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
cc67c76
Fri Apr 17 09:44:01 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:50:29: error: too few arguments to function ‘calloc’
   50 |     new->buckets = (Pair **)calloc(sizeof(Pair *) * capacity);
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
d4a28df
